--- a/Core/OptimizationEngine.Core.csproj
+++ b/Core/OptimizationEngine.Core.csproj
@@ -5,10 +5,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ILGPU" Version="1.5.2" />
+    <PackageReference Include="ILGPU.Algorithms" Version="1.5.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Reflection.Metadata" Version="9.0.5" />
-    <PackageReference Include="Silk.NET.OpenCL" Version="2.22.0" />
   </ItemGroup>
 
   <PropertyGroup>
